--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,6 +61,7 @@ en:
   "PRODUCTS_SEARCH_NO_RESULTS": "There are no products matching the selection."
 
   "PRODUCT_SHOW_BACK": "Back to category"
+  "PRODUCT_SHOW_ADD_TO_CART": "To cart"
   "PRODUCT_SHOW_COMPOSITION": "Composition"
   "PRODUCT_SHOW_RETURN": "Return"
   "PRODUCT_SHOW_RETURN_TEXT": "Return within 30 days"
