--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -61,6 +61,7 @@ pl:
   "PRODUCTS_SEARCH_NO_RESULTS": "Brak produktów spełniających wyszukiwanie."
 
   "PRODUCT_SHOW_BACK": "Wróć do kategorii"
+  "PRODUCT_SHOW_ADD_TO_CART": "Do koszyka"
   "PRODUCT_SHOW_COMPOSITION": "Skład"
   "PRODUCT_SHOW_RETURN": "Zwroty"
   "PRODUCT_SHOW_RETURN_TEXT": "Zwroty możliwe w ciągu 30 dni"
