[#9] 9.2 Add modal to choose size in show view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,6 +66,7 @@ en:
   "PRODUCTS_SEARCH_NO_RESULTS": "There are no products matching the selection."
 
   "PRODUCT_SHOW_BACK": "Back to category"
+  "PRODUCT_SHOW_CHOOSE_SIZE": "Choose size"
   "PRODUCT_SHOW_ADD_TO_CART": "To cart"
   "PRODUCT_SHOW_COMPOSITION": "Composition"
   "PRODUCT_SHOW_RETURN": "Return"
