[#10] Fix problem with datepicker

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,7 +85,7 @@ en:
   "LAST_NAME_PLACEHOLDER": "Last name*"
   "EMAIL_PLACEHOLDER": "Email*"
   "TEL_NUM_PLACEHOLDER": "Telephone number"
-  "BIRTH_DATE_PLACEHOLDER": "Birth date (YYYY-MM-DD)"
+  "BIRTH_DATE_PLACEHOLDER": "Birth date (DD-MM-YYYY)"
   "PASSWORD_PLACEHOLDER": "Password*"
   "PASSWORD_CONFIRMATION_PLACEHOLDER": "Password confirmation*"
   "TEL_NUM_REQUIRED_PLACEHOLDER": "Telephone number*"
@@ -110,7 +110,7 @@ en:
   "ERROR_TEL_NUM_REQUIRED": "Telephone number is required"
   "ERROR_TEL_NUM_SHORT": "Telephone number is too short"
   "ERROR_TEL_NUM_PATTERN": "Telephone number must contain only digits"
-  "ERROR_BIRTH_DATE_PATTERN": "Date format is invalid (YYYY-MM-DD)"
+  "ERROR_BIRTH_DATE_PATTERN": "Date format is invalid (DD-MM-YYYY)"
   "ERROR_PASSWORD_REQUIRED": "Password is required"
   "ERROR_PASSWORD_SHORT": "Password is too short"
   "ERROR_PASSWORD_MISMATCH": "Password confirmation doesn't match password"
