--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -85,7 +85,7 @@ pl:
   "LAST_NAME_PLACEHOLDER": "Nazwisko*"
   "EMAIL_PLACEHOLDER": "Email*"
   "TEL_NUM_PLACEHOLDER": "Numer telefonu"
-  "BIRTH_DATE_PLACEHOLDER": "Data urodz. (RRRR-MM-DD)"
+  "BIRTH_DATE_PLACEHOLDER": "Data urodz. (DD-MM-RRRR)"
   "PASSWORD_PLACEHOLDER": "Hasło*"
   "PASSWORD_CONFIRMATION_PLACEHOLDER": "Potwierdzenie hasła*"
   "TEL_NUM_REQUIRED_PLACEHOLDER": "Numer telefonu*"
@@ -110,7 +110,7 @@ pl:
   "ERROR_TEL_NUM_REQUIRED": "Numer telefonu jest wymagany"
   "ERROR_TEL_NUM_SHORT": "Numer telefonu musi zbyt krótki"
   "ERROR_TEL_NUM_PATTERN": "Numer telefonu musi składać się z cyfr"
-  "ERROR_BIRTH_DATE_PATTERN": "Format daty jest niepoprawny (RRRR-MM-DD)"
+  "ERROR_BIRTH_DATE_PATTERN": "Format daty jest niepoprawny (DD-MM-RRRR)"
   "ERROR_PASSWORD_REQUIRED": "Hasło jest wymagane"
   "ERROR_PASSWORD_SHORT": "Hasło jest zbyt krótkie"
   "ERROR_PASSWORD_MISMATCH": "Potwierdznie hasła nie pasuje do hasła"
